# server/swagger.yaml
@@ -13,22 +13,101 @@ paths:
   /users/getAllUsers:
     get:
       summary: Returns a list of users.
-      description: Optional extended description in CommonMark or HTML.
+      tags: [User]
       responses:
         '200':    # status code
           description: A JSON array of user names
           content:
             application/json:
               schema: 
-                type: array
-                items: 
-                  type: string
+               $ref: '#/components/schemas/User'
+
+  /users/{userId}:
+    get:
+      summary: Returns a particular user
+      tags: [User]
+      parameters: 
+        - name: userId
+          in: path
+          required: true
+          description: autogenerated user id by mongo
+          schema:
+            type: string
+      responses: 
+        '200':
+          description: OK
+        '400':
+          description: Couldn't find it
+    
+    delete:
+      summary: deletes a user
+      tags: [User]
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: autogenerated userid by mongo
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Deleted
+        '400':
+          description: does not exist
+        '500':
+          description: error
+
+  /users/:
+    post:
+      summary: adds a new record
+      tags: [User]
+      requestBody:
+        required: true
+        content: 
+          application/json:
+            schema:
+              $ref: '#/components/schema/User'
+      responses:
+        '200':
+          description: created
+        '400':
+          description: error
+
+
   
 
 
   /class/getAllClasses:
     get:
-      summary: Returns a list of users.
+      summary: Returns a list of classes.
+      tags: [Class]
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Class'
+
+  /class/get/{classId}:
+    get:
+      summary: perticular class
+      description: sometjong
+      responses:
+        '200':
+          description: classinfo
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+
+
+  
+  /classwork/getAllClassworks:
+    get:
+      summary: Returns a list of classworks assigned.
       description: Optional extended description in CommonMark or HTML.
       responses:
         '200':    # status code
@@ -40,17 +119,62 @@ paths:
                 items: 
                   type: string
 
-  
-  /classwork//getAllClassworks:
-    get:
-      summary: Returns a list of users.
-      description: Optional extended description in CommonMark or HTML.
-      responses:
-        '200':    # status code
-          description: A JSON array of user names
-          content:
-            application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
+
+components:
+  schemas:
+    User:
+      type: object
+      required: 
+        - username
+        - password
+        - email
+        - profile_picture
+        - token
+        - archived_class
+
+      properties:
+        id:
+          type: string
+        password:
+          type: string
+        email:
+          type: string
+        profile_picture:
+          type: string
+        token:
+          type: string
+        archived_class:
+          type: array
+
+    Class:
+      type: object
+      required: 
+        - title
+        - description
+        - archived
+        - teacher
+        - students
+        - owner
+        - code
+
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        archived:
+          type: boolean
+          items: 
+            type: string
+        teacher:
+          type: array
+          items: 
+            type: string
+        students:
+          type: array
+          items: 
+            type: string
+        owner:
+          type: string
+        code:
+          type: string
